<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>vavi</groupId>
  <artifactId>vavi-nio-file-discutils</artifactId>
  <version>0.14.8</version>

  <properties>
    <vavi-nio-file-fuse.groupId>com.github.umjammer</vavi-nio-file-fuse.groupId> <!-- vavi / com.github.umjammer -->
    <vavi-nio-file-fuse.version>0.0.16</vavi-nio-file-fuse.version>
  </properties>

  <profiles>
    <profile>
      <id>spotbugs</id>
      <activation>
        <property>
          <name>spotbugs</name>
          <value/>
        </property>
      </activation>
      <reports>
        <plugins>
          <plugin>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-maven-plugin</artifactId>
            <version>4.7.3.2</version>
            <dependencies>
              <!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
              <dependency>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs</artifactId>
                <version>4.7.3</version>
              </dependency>
              <dependency>
                <groupId>com.formdev</groupId>
                <artifactId>flatlaf</artifactId>
                <version>3.4.1</version>
              </dependency>
            </dependencies>
            <configuration>
              <plugins>
                <plugin>
                  <groupId>com.mebigfatguy.fb-contrib</groupId>
                  <artifactId>fb-contrib</artifactId>
                  <version>7.4.3.sb</version>
                </plugin>
              </plugins>

              <jvmArgs>
                <!--
                 seems not working, use export MAVEN_OPTS=
                 e.g.
                 MAVEN_OPTS=-Dswing.defaultlaf=com.formdev.flatlaf.FlatLightLaf mvn -P spotbugs spotbugs:gui
                 -->
                -Dswing.defaultlaf=com.formdev.flatlaf.FlatLightLaf
              </jvmArgs>
              <systemPropertyVariables>
                <swing.defaultlaf>com.formdev.flatlaf.FlatLightLaf</swing.defaultlaf>
              </systemPropertyVariables>
              <failOnError>false</failOnError>
            </configuration>
            <executions>
              <execution>
                <goals>
                  <goal>check</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </reports>
    </profile>

    <profile>
      <id>qlgenerator</id>
      <activation>
        <property>
          <name>qlgenerator</name>
          <value/>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-antrun-plugin</artifactId>
            <version>3.1.0</version>
            <executions>
              <execution>
                <phase>compile</phase>
                <goals>
                  <goal>run</goal>
                </goals>
                <configuration>
                  <target>
                    <jar jarfile="${project.build.directory}/vavi-qlgenerator.jar"
                         manifest="src/qlgenerator/resources/manifest.mf">
                      <fileset dir="${project.build.outputDirectory}">
                        <include name="vavi/apps/qlgenerator/*.class" />
                      </fileset>
                    </jar>
                  </target>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.12.1</version>
        <configuration>
          <release>17</release>
          <testExcludes>
            <testExclude>discUtils/powerShell/**</testExclude>
            <testExclude>diskClone/**</testExclude>
            <testExclude>msBuildTask/**</testExclude>
          </testExcludes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.5</version>
        <configuration>
          <reuseForks>true</reuseForks>
          <argLine>
            -Xms2048m -Xmx4096m
            -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
            -Dvavi.util.logging.VaviFormatter.extraClassMethod=org\.apache\.commons\.logging\.impl\.Jdk14Logger#(log|debug)
          </argLine>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>gitlab-maven</id> <!-- vavi-nio-file-emu -->
      <url>https://gitlab.com/api/v4/projects/31203504/packages/maven</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.13.4</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- com.github.umjammer -->
      <artifactId>vavi-commons</artifactId>
      <version>1.1.14</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- com.github.fge / com.github.umjammer -->
      <artifactId>vavi-nio-file-base</artifactId>
      <version>0.0.16</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- moe.yo3explorer / com.github.umjammer -->
      <artifactId>dotnet4j</artifactId>
      <version>1.2.5</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>klab-commons-cli</artifactId>
      <version>1.3.3</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- com.github.umjammer -->
      <artifactId>klab-commons-csv</artifactId>
      <version>2.0.4</version>
    </dependency>

    <dependency>
      <groupId>vavi</groupId>
      <artifactId>vavi-nio-file-emu</artifactId>
      <version>2.0.5</version>
      <exclusions>
        <exclusion>
          <groupId>com.github.umjammer</groupId>
          <artifactId>vavi-awt</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>net.java.dev.jna</groupId>
      <artifactId>jna</artifactId>
      <version>5.17.0</version>
    </dependency>

    <dependency>
      <groupId>com.squareup.okhttp3</groupId>
      <artifactId>okhttp</artifactId>
      <version>4.12.0</version>
    </dependency>

    <dependency>
      <groupId>org.tukaani</groupId>
      <artifactId>xz</artifactId>
      <version>1.10</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-sound-flac-nayuki</artifactId>
      <version>0.0.2</version>
    </dependency>

    <dependency>
      <groupId>com.github.umjammer</groupId> <!-- vavi / com.github.umjammer -->
      <artifactId>vavi-nio-file-qcow2</artifactId>
      <version>0.0.1</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>${vavi-nio-file-fuse.groupId}</groupId>
      <artifactId>vavi-nio-file-fuse</artifactId>
      <version>${vavi-nio-file-fuse.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>${vavi-nio-file-fuse.groupId}</groupId>
      <artifactId>vavi-nio-file-fuse</artifactId>
      <version>${vavi-nio-file-fuse.version}</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.maven.plugin-tools</groupId>
      <artifactId>maven-plugin-annotations</artifactId>
      <version>3.12.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-plugin-api</artifactId>
      <version>3.9.9</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.github.k9mail</groupId>
      <artifactId>jutf7</artifactId>
      <version>b931e67a62</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
